Fixed text alignment, added speech bubble

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@
     width: 125px;
     height: 250px;
     position: relative;
-    left: 50px;
-    bottom: 40px;
+    left: 20px;
+    bottom: 100px;
 }
 
 #counterImage {
@@ -45,6 +45,7 @@
     height: 200px;
     position: relative;
     right: 150px;
+    bottom: 50px;
     
 }
 
@@ -99,19 +100,25 @@
 #serve {
     z-index: 3;
     position: relative;
-    left: 120px;
-    bottom: 80px;
+    left: 40px;
+    bottom: 150px;
 }
 
 #customerText {
     position: relative;
-    bottom: 40px;
-    right: 200px;
+    bottom: 60px;
+    right: 170px;
+    width: 180px;
+    height: 100px;
+    word-wrap: normal;
+    text-align: center;
 }
 
 #score {
     float: left;
-    position: absolute;
+    position: relative;
+    right: 40px;
+    bottom: 40px;
 }
 
 #background {
